[package]
name = "strum-lite"
version = "0.1.1"
edition = "2024"
description = "Lightweight declarative macro for sets of strings."
categories = ["rust-patterns", "parsing", "no-std::no-alloc", "no-std"]
license = "MIT OR Apache-2.0 OR Unlicense OR WTFPL"
repository = "https://github.com/aatifsyed/strum-lite"
documentation = "https://docs.rs/strum-lite"
homepage = "https://crates.io/crates/strum-lite"
